@@ -30,6 +30,7 @@ Bugs fixed:
 - 1601174 Fixed interopProvider segfault
 - 1601644 Added more timing traces
 - 1605216 Fixed empty propertyList causes parser error
+- 1605234 Fixed parse error when IPARAMVALUE CLASSNAME is missing
 
 Changes in 1.1.1
 ================
